test/classes/delete-free/shared/shared-default-arg-nil-ref.good
shared-default-arg-nil-ref.chpl:13: error: in call to 'foo', cannot pass result of coercion by reference
shared-default-arg-nil-ref.chpl:13: note: implicit coercion from 'nil' to 'shared MyClass?'
shared-default-arg-nil-ref.chpl:7: note: when passing to 'ref' intent formal 'opt'
